fixed calendar time wrapping bug

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -232,6 +232,7 @@ div.calendar {
 
         label {
           float: right;
+          margin: 0;
         }
 
         .times {
